add shell linter to ale

--- a/_scripts/Brewfile
+++ b/_scripts/Brewfile
@@ -25,6 +25,7 @@ brew 'reattach-to-user-namespace'
 brew 'rename'
 brew 'ripgrep'
 brew 'rsync'
+brew 'shfmt'
 brew 'speedtest-cli'
 brew 'stow'
 brew 'terminal-notifier'
