add transmit cask

--- a/_scripts/Brewfile
+++ b/_scripts/Brewfile
@@ -69,6 +69,7 @@ cask 'magicprefs'
 cask 'ngrok'
 cask 'signal'
 cask 'slack'
+cask 'transmit'
 cask 'tripmode'
 cask 'tunnelblick'
 cask 'veracrypt'
