--- a/_scripts/Brewfile
+++ b/_scripts/Brewfile
@@ -30,6 +30,7 @@ brew 'speedtest-cli'
 brew 'stow'
 brew 'terminal-notifier'
 brew 'tmux'
+brew 'tldr'
 brew 'tree'
 brew 'vim'
 brew 'yarn-completion'
