--- a/_scripts/Brewfile
+++ b/_scripts/Brewfile
@@ -76,6 +76,7 @@ cask 'veracrypt'
 cask 'whatsapp'
 
 mas 'Amphetamine', id: 937984704
+mas 'Bear', id: 1091189122
 mas 'Monosnap', id: 540348655
 mas 'Moom', id: 419330170
 mas 'NordVPN IKE', id: 1116599239
