add pixelmator to brewfile

--- a/_scripts/Brewfile
+++ b/_scripts/Brewfile
@@ -82,3 +82,4 @@ mas 'Moom', id: 419330170
 mas 'NordVPN IKE', id: 1116599239
 mas 'Wallcat', id: 1000397973
 mas 'YubiKey Personalization Tool', id: 638161122
+mas 'Pixelmator', 407963104
