--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -36,3 +36,7 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+set -g pane-border-format "#P: #{pane_current_command}"
+
+bind t command-prompt -p "(rename-pane)" -I "#T" "select-pane -T '%%'"
