--- a/vim/.vim/templates/spec.js.template
+++ b/vim/.vim/templates/spec.js.template
@@ -1,11 +1,11 @@
 // imports
 
-describe('Name', function() {
-  beforeEach(function() {
+describe('Name', () => {
+  beforeEach(() => {
     // initilize stuff
   });
 
-  it('does stuff', function() {
+  it('does stuff', () => {
     // test stuff
   });
 });
