use cask version of google cloud sdk

--- a/_scripts/Brewfile
+++ b/_scripts/Brewfile
@@ -62,6 +62,7 @@ cask 'firefox'
 cask 'flux'
 cask 'gitter'
 cask 'google-chrome'
+cask 'google-cloud-sdk'
 cask 'istat-menus'
 cask 'iterm2'
 cask 'keybase'
