--- a/_scripts/Brewfile
+++ b/_scripts/Brewfile
@@ -30,10 +30,11 @@ brew 'shfmt'
 brew 'speedtest-cli'
 brew 'stow'
 brew 'terminal-notifier'
-brew 'tmux'
 brew 'tldr'
+brew 'tmux'
 brew 'tree'
 brew 'vim'
+brew 'yarn'
 brew 'yarn-completion'
 
 brew 'coreutils'
