fix tmux theme location

--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -1,6 +1,6 @@
 
 # theme generated with edkolev/tmuxline.vim
-source-file ~/lib/lightlight.tmux-theme
+source-file ~/.local/lib/lightlight.tmux-theme
 source-file ~/.tmux.conf.local
 
 # set $TERM type
