--- a/_scripts/Brewfile
+++ b/_scripts/Brewfile
@@ -29,6 +29,7 @@ brew 'rsync'
 brew 'shfmt'
 brew 'speedtest-cli'
 brew 'stow'
+brew 'temuxinator'
 brew 'terminal-notifier'
 brew 'tldr'
 brew 'tmux'
