--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -4,7 +4,8 @@ source-file ~/.local/share/lightlight.tmux-theme
 source-file ~/.tmux.conf.local
 
 # set $TERM type
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 # turn on mouse interactions
 setw -g mouse on
