git new creates new repo with main as trunk branch

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -91,6 +91,7 @@
   # OTHER HELPERS
   ###############################################
 
+  new = "!git init && git symbolic-ref HEAD refs/heads/main"
   assume = update-index --assume-unchanged
   unassume = update-index --no-assume-unchanged
   assumed = "!git ls-files -v | grep ^h | cut -c 3-"
