--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -8,7 +8,7 @@ set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 
 # turn on mouse interactions
-setw -g mouse on
+set -g mouse on
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
