--- a/_scripts/Brewfile
+++ b/_scripts/Brewfile
@@ -26,6 +26,7 @@ brew 'reattach-to-user-namespace'
 brew 'rename'
 brew 'ripgrep'
 brew 'rsync'
+brew 'Schniz/tap/fnm'
 brew 'shfmt'
 brew 'speedtest-cli'
 brew 'stow'
