Revert "setup true color colorscheme"
This reverts commit bb3d3fda9a3d21a56f257bb7a9893f4b848723b3.

--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -4,8 +4,7 @@ source-file ~/.local/share/lightlight.tmux-theme
 source-file ~/.tmux.conf.local
 
 # set $TERM type
-set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "xterm-256color"
 
 # turn on mouse interactions
 set -g mouse on
