--- a/_scripts/Brewfile
+++ b/_scripts/Brewfile
@@ -40,6 +40,7 @@ brew 'yarn'
 brew 'yarn-completion'
 
 brew 'coreutils'
+brew 'diffutils'
 brew 'findutils'
 brew 'gawk'
 brew 'gnu-getopt'
@@ -48,8 +49,8 @@ brew 'gnu-sed'
 brew 'gnu-tar'
 brew 'gnu-time'
 brew 'gnutls'
-brew 'diffutils'
 brew 'grep'
+brew 'moreutils'
 
 cask 'homebrew/cask-fonts/font-inconsolata'
 cask 'homebrew/cask-fonts/font-hack-nerd-font'
