add edit-umerged command

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -67,6 +67,7 @@
   b = branch -vv # Verbose branch list. Shows upstream branches.
   ds = diff --stat=160,120
   unmerged = diff --name-only --diff-filter=U
+  edit-unmerged = "!vim `git diff --name-only --diff-filter=U`"
 
   ###############################################
   # BRANCH MANAGEMENT
