use jsctags for node projects

--- a/_scripts/Brewfile
+++ b/_scripts/Brewfile
@@ -27,7 +27,7 @@ brew 'reattach-to-user-namespace'
 brew 'rename'
 brew 'ripgrep'
 brew 'rsync'
-brew 'Schniz/tap/fnm'
+brew 'fnm'
 brew 'shfmt'
 brew 'speedtest-cli'
 brew 'stow'
