add tmux pane helpers

--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -31,11 +31,28 @@ setw -g pane-base-index 1
 # Make the current window the first window
 bind T swap-window -t 1
 
-# easier pane navigation
+# use <prefix> s for horizontal split
+bind s split-window -v
+# use <prefix> v for vertical split
+bind v split-window -h
+
+# vim like pane navigation
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+# vim like pane swapping
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# resize panes more easily
+bind < resize-pane -L 10
+bind > resize-pane -R 10
+bind - resize-pane -D 10
+bind + resize-pane -U 10
 
 set -g pane-border-format "#P: #{pane_current_command}"
 
