reload tmux.conf command

--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -3,6 +3,9 @@
 source-file ~/.local/share/lightlight.tmux-theme
 source-file ~/.tmux.conf.local
 
+# reload config
+bind r source-file ~/.tmux.conf
+
 # set $TERM type
 set -g default-terminal "xterm-256color"
 
