--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -4,7 +4,7 @@
 
 [user]
   name = pietvanzoen
-  email = hi@pietvanzoen.com
+  email = hi@piet.me
   username = pietvanzoen
   signingkey = 119BA45BFDF0E612
 
