use old email for gpg
this is the email saved in the gpg key

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -4,7 +4,7 @@
 
 [user]
   name = pietvanzoen
-  email = hi@piet.me
+  email = hi@pietvanzoen.com
   username = pietvanzoen
   signingkey = 119BA45BFDF0E612
 
