install fira-code font

--- a/_scripts/Brewfile
+++ b/_scripts/Brewfile
@@ -58,6 +58,9 @@ brew 'gnutls'
 brew 'grep'
 brew 'moreutils'
 
+tap 'homebrew/cask-fonts'
+cask 'font-fira-code'
+
 cask_args appdir: "/Applications"
 cask 'alfred'
 cask 'bartender'
