--- a/_scripts/Brewfile
+++ b/_scripts/Brewfile
@@ -33,7 +33,6 @@ brew 'rsync'
 brew 'shfmt'
 brew 'speedtest-cli'
 brew 'stow'
-brew 'temuxinator'
 brew 'terminal-notifier'
 brew 'tldr'
 brew 'tmux'
@@ -62,22 +61,23 @@ tap 'homebrew/cask-fonts'
 cask 'font-fira-code'
 
 cask_args appdir: "/Applications"
-cask 'alfred'
+# cask 'alfred'
 cask 'bartender'
 cask 'bitbar'
 cask 'docker'
 # cask 'dropbox'
-cask 'google-cloud-sdk'
+# cask 'google-cloud-sdk'
 cask 'istat-menus'
 # cask 'iterm2'
 # cask 'keybase'
 cask 'signal'
 # cask 'slack'
 cask 'transmit'
-cask 'tripmode'
-cask 'tunnelblick'
-cask 'veracrypt'
+# cask 'tripmode'
+# cask 'tunnelblick'
+# cask 'veracrypt'
 cask 'whatsapp'
+cask 'visual-studio-code'
 
 mas '1Blocker', id: 1107421413
 mas 'Amphetamine', id: 937984704
