Setup karabiner elements

--- a/_scripts/Brewfile
+++ b/_scripts/Brewfile
@@ -69,6 +69,7 @@ cask 'bartender'
 cask 'bitbar'
 cask 'docker'
 cask 'istat-menus'
+cask 'karabiner-elements'
 cask 'signal'
 cask 'transmit'
 cask 'visual-studio-code'
