--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -26,6 +26,7 @@ set-option -g allow-rename off
 
 # fix cursor shape for zsh vi mode
 # set -ga terminal-overrides ",screen*:Ss=^[[%p1%d q:Se=^[[2 q"
+set-option -sa terminal-overrides ",xterm-*:RGB"
 
 # set window and pane index to 1 (0 by default)
 set-option -g base-index 1
