--- a/_scripts/Brewfile
+++ b/_scripts/Brewfile
@@ -26,6 +26,7 @@ brew 'mosh'
 brew 'mtr'
 brew 'neovim'
 brew 'pstree'
+brew 'rclone'
 brew 'reattach-to-user-namespace'
 brew 'rename'
 brew 'ripgrep'
