--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -47,10 +47,10 @@ bind k select-pane -U
 bind l select-pane -R
 
 # vim like pane swapping
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+# bind -n M-Left select-pane -L
+# bind -n M-Right select-pane -R
+# bind -n M-Up select-pane -U
+# bind -n M-Down select-pane -D
 
 # resize panes more easily
 bind < resize-pane -L 10
@@ -61,3 +61,6 @@ bind + resize-pane -U 10
 set -g pane-border-format "#P: #{pane_current_command}"
 
 bind t command-prompt -p "(rename-pane)" -I "#T" "select-pane -T '%%'"
+
+bind -n C-) switch-client -n
+bind -n C-( switch-client -p
