--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -55,6 +55,7 @@
   ci = commit --verbose # Verbose commit. Shows diff in commit message editor.
   roll-back-one = reset HEAD~1 # Roll back one commit.
   co = checkout
+  sw = switch
   di = diff
   dc = diff --cached
   amend = commit --amend
