--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -64,9 +64,9 @@
   aa = add --all
   ap = aa -p
   b = branch -vv # Verbose branch list. Shows upstream branches.
-  ds = diff --stat=160,120
+  ds = diff --staged --stat=160,120
   unmerged = diff --name-only --diff-filter=U
-  edit-unmerged = "!vim `git diff --name-only --diff-filter=U`"
+  edit-unmerged = "!nvim `git diff --name-only --diff-filter=U`"
 
   ###############################################
   # BRANCH MANAGEMENT
