--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -13,7 +13,13 @@ set -g default-terminal "xterm-256color"
 set -g mouse on
 
 # Use vim keybindings in copy mode
-setw -g mode-keys vi
+# setw -g mode-keys vi
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+# bind y run-shell "reattach-to-user-namespace -l zsh -c 'tmux show-buffer | pbcopy'"
 
 # set scrollback history to 10000 (10k)
 set -g history-limit 10000
