--- a/_scripts/Brewfile
+++ b/_scripts/Brewfile
@@ -6,6 +6,8 @@ brew 'bat'
 brew 'blueutil'
 brew 'ctags'
 brew 'curl'
+brew 'direnv'
+brew 'docker'
 brew 'docker-compose-completion'
 brew 'exa'
 brew 'fd'
