--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -70,3 +70,5 @@ bind t command-prompt -p "(rename-pane)" -I "#T" "select-pane -T '%%'"
 
 bind -n C-) switch-client -n
 bind -n C-( switch-client -p
+
+run-shell ~/.tmux/tmux-safekill/safekill.tmux
