--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -4,7 +4,7 @@ source-file ~/.local/share/lightlight.tmux-theme
 source-file ~/.tmux.conf.local
 
 # reload config
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # set $TERM type
 set -g default-terminal "xterm-256color"
@@ -68,7 +68,10 @@ set -g pane-border-format "#P: #{pane_current_command}"
 
 bind t command-prompt -p "(rename-pane)" -I "#T" "select-pane -T '%%'"
 
-bind -n C-) switch-client -n
-bind -n C-( switch-client -p
+bind-key -n C-9 switch-client -n
+bind-key -n C-0 switch-client -p
 
 run-shell ~/.tmux/tmux-safekill/safekill.tmux
+
+bind-key -n C-Tab next-window
+bind-key -n C-BTab previous-window
