--- a/vim/.vim/coc-settings.json
+++ b/vim/.vim/coc-settings.json
@@ -9,5 +9,5 @@
   "emmet.showAbbreviationSuggestions": true,
   // coc-deno causes tsserver to read js files as ts files. enable per project with :CocLocalConfig
   // "deno.enable": false
-  "snippets.userSnippetsDirectory": "~/.vim/snippets"
+  "snippets.userSnippetsDirectory": "~/.vim/snippets",
 }
