Rename tmux panes to the current path

--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -66,6 +66,10 @@ bind + resize-pane -U 10
 
 set -g pane-border-format "#P: #{pane_current_command}"
 
+set-option -g status-interval 5
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{b:pane_current_path}'
+
 bind t command-prompt -p "(rename-pane)" -I "#T" "select-pane -T '%%'"
 
 bind-key -n C-9 switch-client -n
