--- a/shell/.tmuxinator/cutr.yaml
+++ b/shell/.tmuxinator/cutr.yaml
@@ -1,28 +1,23 @@
 name: cutr
 root: ~/repos/github.com/cutr-dev/cutr-server
 
-on_project_stop: pkill node
+on_project_start: cd server && yarn
 
 windows:
   - Cutr:
       layout: e23f,214x52,0,0{147x52,0,0[147x26,0,0,20,147x25,0,27,21],66x52,148,0[66x8,148,0,22,66x7,148,9,23,66x35,148,17,24]}
-        # layout: 440c,238x51,0,0{159x51,0,0[159x25,0,0,60,159x25,0,26,67],78x51,160,0[78x12,160,0,66,78x38,160,13,68]}
       panes:
         - server:
           - cd server
-          - yarn
           - tmux-run-pane yarn dev | spacer
         - workers:
           - cd server
-          - sleep 5
           - tmux-run-pane yarn dev:worker | spacer
         - ui:
           - cd ui
-          - sleep 5
           - tmux-run-pane yarn dev
         - cutlist:
           - cd cutlist
-          - sleep 5
           - tmux-run-pane yarn dev
         - dev:
           - cutr-migrate
