Move lazy config into one file

--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -7,7 +7,9 @@ source-file ~/.tmux.conf.local
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # set $TERM type
-set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
+
+set-option -g focus-events on
 
 # turn on mouse interactions
 set -g mouse on
